<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_mine"
    app:startDestination="@id/mineFragment">

    <fragment
        android:id="@+id/mineFragment"
        android:name="com.btg.mine.ui.MineFragment"
        android:label="@string/mine_title">
        <action
            android:id="@+id/action_mine_to_login"
            app:destination="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.btg.mine.ui.LoginFragment"
        android:label="@string/login_title">
        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/registerFragment" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.btg.mine.ui.RegisterFragment"
        android:label="@string/register_title" />

</navigation>
